# PelegsAlg

./: BfsAlg.cpp  BfsAlg.h  CMakeLists.txt  Connection.cpp  Connection.h  Node.cpp  Node.h  PelegsAlg.cpp  PelegsAlg.h  Sync.cpp  Sync.h  SyncTree.cpp  SyncTree.h  SynchAlg.cpp  SynchAlg.h  TestAlg.cpp  TestAlg.h  Utils.cpp  Utils.h  cleanup.sh  launcher.sh  main.cpp  testAlg.h  testConfig.txt
